== master (not tagged yet) ==

* Buttons are unselectable now and have no anchors (CSS reviewed) - mrapczynski

== Version 0.8 (revival) ==

+ enabled, destroy, removeFormat, save actions added to $('#elt').wysiwyg(action) - fomojola
+ insertTable action/button added - academo
+ insertTable and insertImage buttons now support jQuery UI Dialog and SimpleModal plugin - academo
+ Event handlers supported through events - akzhan.abdulin
+ Editor now supports jQuery UI resizable plugin through resizeOptions - akzhan.abdulin
* jWysiwyg now wraps Mozilla bug that disables editor creation in AJAX calls - akzhan.abdulin 
* MSG_EN abd TOOLBAR replaced with $.fn.wysiwyg.defaults/controls - akzhan.abdulin
* separators replaced with group indexes - akzhan.abdulin
* Directory structure reorganized - academo

== Version 0.7 ==

* Ctrl+B, Ctrl+I and Ctrl+U keystrokes in non-IE browsers now works like IE ones - akzhan.abdulin
* insertHtml in non-focused editor works now - akzhan.abdulin
* Appearance of toolbar buttons fixed under IE7/8 - ibnteo, mail2lx
! Code reviewed.

== Version 0.6 ==

* New $().wysiwyg('insertHtml', string) method - akzhan.abdulin
* New example (nearby full editor) added - deansofer
* CSS styling replaced with tags in Firefox -  Svel.Sontz, tobinl, AndreyKostromin ans others
* Minor problems with focus in non-IE fixed - tyler.schacht
* Correct setup of form events - Mickael.Hoareau
* Editor now correctly sets its tabindex on initialization - denis.vysotskiy
* Insertion of headers in safari fixed - gpearman
* More correct styling of editor - gamingforever
* Correct behaviour on IE using https protocol - jf.stgermain
* Incorrect initialization of editor when content contains "$" characters fixed - JackPDouglas
* Improved CSS degradability - deansofer
* Improved ARIA accessability - akzhan.abdulin
! Requires jQuery 1.3 or higher! Tested under jQuery 1.4 too.