@@ -1,6 +1,8 @@
 == master (not tagged yet) ==
 
 * Buttons are unselectable now and have no anchors (CSS reviewed) - mrapczynski
+* Way to return focus to editor has been corrected - mappam0
+* $.fn.documentSelection has been removed to minimize pollution of $.fn namespace - akzhan.abdulin
 
 == Version 0.8 (revival) ==
 
@@ -13,6 +15,7 @@
 * MSG_EN abd TOOLBAR replaced with $.fn.wysiwyg.defaults/controls - akzhan.abdulin
 * separators replaced with group indexes - akzhan.abdulin
 * Directory structure reorganized - academo
+* $.fn.document has been removed to minimize pollution of $.fn namespace - akzhan.abdulin
 
 == Version 0.7 ==
 
